--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>spring-boot-datasource</module>
         <module>spring-boot-sharding-jdbc</module>
         <module>spring-boot-redis</module>
+        <module>spring-boot-elasticsearch</module>
     </modules>
 
 
