--- a/spring-boot-elasticsearch/pom.xml
+++ b/spring-boot-elasticsearch/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <elasticsearch.version>7.6.1</elasticsearch.version>
     </properties>
 
     <dependencies>
