--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>spring-boot-sharding-jdbc</module>
         <module>spring-boot-redis</module>
         <module>spring-boot-elasticsearch</module>
+        <module>spring-boot-log</module>
     </modules>
 
 
