--- a/spring-boot-log/src/main/resources/application.yml
+++ b/spring-boot-log/src/main/resources/application.yml
@@ -11,7 +11,8 @@ spring:
 
 #指定使用的日志配置文件
 logging:
-  config: classpath:logback-spring.xml
+#  config: classpath:logback-spring.xml
 #  config: classpath:special-logback.xml
 #  config: classpath:logback-spring-${spring.profiles.active}.xml
+  config: classpath:logback-spring-filter.xml
 
