--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.2.RELEASE</version>
+    </parent>
+
     <groupId>com.hzy.springboot.demos</groupId>
     <artifactId>spring-boot-2.2.x-demos</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
     <modules>
         <module>spring-boot-rabbitMQ</module>
         <module>spring-boot-file</module>
@@ -17,14 +24,9 @@
         <module>spring-boot-redis</module>
         <module>spring-boot-elasticsearch</module>
         <module>spring-boot-log</module>
+        <module>spring-boot-base</module>
     </modules>
 
-
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.2.RELEASE</version>
-    </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -52,6 +54,13 @@
         <pagehelper-version>5.1.3</pagehelper-version>
         <spring-cloud.version>Finchley.SR2</spring-cloud.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
     <dependencyManagement>
         <dependencies>
@@ -83,29 +92,9 @@
                 <version>${httpclient}</version>
             </dependency>
             <dependency>
-                <groupId>org.apache.httpcomponents</groupId>
-                <artifactId>httpmime</artifactId>
-                <version>${httpmime}</version>
-            </dependency>
-            <dependency>
-                <groupId>axis</groupId>
-                <artifactId>axis</artifactId>
-                <version>${axis-version}</version>
-            </dependency>
-            <dependency>
                 <groupId>commons-httpclient</groupId>
                 <artifactId>commons-httpclient</artifactId>
                 <version>${commons-httpclient}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.zxing</groupId>
-                <artifactId>javase</artifactId>
-                <version>${google.zxing.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.zxing</groupId>
-                <artifactId>core</artifactId>
-                <version>${google.zxing.core}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.poi</groupId>
@@ -116,36 +105,6 @@
                 <groupId>com.lowagie</groupId>
                 <artifactId>itext</artifactId>
                 <version>${com.lowagie.itext}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.jeecg</groupId>
-                <artifactId>easypoi-base</artifactId>
-                <version>${org.jeecg.easypoi-base}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.jeecg</groupId>
-                <artifactId>easypoi-annotation</artifactId>
-                <version>${org.jeecg.easypoi-annotation}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.shiro</groupId>
-                <artifactId>shiro-spring</artifactId>
-                <version>${shiro-spring-version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.crazycake</groupId>
-                <artifactId>shiro-redis</artifactId>
-                <version>${shiro-redis-version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.aliyun.openservices</groupId>
-                <artifactId>aliyun-openservices</artifactId>
-                <version>${aliyun-oss}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.github.pagehelper</groupId>
-                <artifactId>pagehelper</artifactId>
-                <version>${pagehelper-version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
