--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,9 @@
         <module>spring-boot-elasticsearch</module>
         <module>spring-boot-log</module>
         <module>spring-boot-base</module>
+        <module>spring-boot-hzy-starter</module>
+        <module>spring-boot-hzy-starter-autoconfigure</module>
+        <module>spring-boot-hzy-starter-use</module>
     </modules>
 
 
