--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.2.RELEASE</version>
+    </parent>
+
     <groupId>com.hzy.springboot.demos</groupId>
     <artifactId>spring-boot-2.2.x-demos</artifactId>
     <packaging>pom</packaging>
@@ -17,14 +23,11 @@
         <module>spring-boot-redis</module>
         <module>spring-boot-elasticsearch</module>
         <module>spring-boot-log</module>
+        <module>spring-boot-base</module>
     </modules>
 
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.2.RELEASE</version>
-    </parent>
+
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
