--- a/spring-boot-hzy-starter-use/pom.xml
+++ b/spring-boot-hzy-starter-use/pom.xml
@@ -10,11 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>spring-boot-hzy-starter-use</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
             <groupId>com.hzy.springboot.demos</groupId>
             <artifactId>spring-boot-hzy-starter-autoconfigure</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
