--- a/spring-boot-hzy-starter-use/pom.xml
+++ b/spring-boot-hzy-starter-use/pom.xml
@@ -15,8 +15,12 @@
     <dependencies>
         <dependency>
             <groupId>com.hzy.springboot.demos</groupId>
-            <artifactId>spring-boot-hzy-starter-autoconfigure</artifactId>
+            <artifactId>spring-boot-hzy-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
 
