--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <java.version>1.8</java.version>
         <httpclient>4.5</httpclient>
         <httpmime>4.5.5</httpmime>
-        <fastjson>1.2.31</fastjson>
+        <fastjson.version>1.2.83</fastjson.version>
         <commons-lang3>3.5</commons-lang3>
         <commons-io>2.6</commons-io>
         <commons-collections>3.2.2</commons-collections>
@@ -112,7 +112,7 @@
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
-                <version>1.2.71</version>
+                <version>${fastjson.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
