--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <groupId>com.hzy.springboot.demos</groupId>
-    <artifactId>spring-boot-2.3.x-demos</artifactId>
+    <artifactId>spring-boot-demos</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
