--- a/spring-boot-elasticsearch/pom.xml
+++ b/spring-boot-elasticsearch/pom.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>spring-boot-2.2.x-demos</artifactId>
         <groupId>com.hzy.springboot.demos</groupId>
+        <artifactId>spring-boot-demos</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>com.hzy.es</groupId>
