--- a/spring-boot-websocket/pom.xml
+++ b/spring-boot-websocket/pom.xml
@@ -3,10 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.8</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.hzy.springboot.demos</groupId>
+        <artifactId>spring-boot-demos</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>com.hzy.websocket</groupId>
     <artifactId>spring-boot-websocket</artifactId>
@@ -20,6 +19,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
 
         <dependency>
